[metadata]
name = Planet Objects
version = 1.0.0
description = Planetary data stored as objects
long_description = file: README.md
long_description_content_type = text/markdown
author = Matthew Kayne
author_email = matthewkayne2004@gmail.com
url = https://github.com/matthewkayne/Planets

[options]
packages = find:
include_package_data = True
